src/snapshots/yurt__config__tests__yaml__snapshots__exclude.snap
---
source: src/config.rs
expression: "ResolvedConfig::try_from(&test.get_args()).expect(\"Failed to resolve input build\").into_config()"
---
build:
  - hook:
      "on": []
      exec:
        shell: custom-shell
        command: something

