src/snapshots/yurt__config__tests__yaml__snapshots__packages.snap
---
source: src/config.rs
expression: "ResolvedConfig::try_from(&test.get_args()).expect(\"Failed to resolve input build\").into_config()"
---
build:
  - install:
      - name: package_a
      - name: package_b
      - name: package_c

