src/snapshots/yurt__config__tests__yaml__snapshots__vars.snap
---
source: src/config.rs
expression: "ResolvedConfig::try_from(&test.get_args()).expect(\"Failed to resolve input build\").into_config()"
---
build:
  - install:
      - name: package_2
      - name: package_3
      - name: package_4

